Add weekly change, current trend projection, and UI improvements
- Add Weekly Change metric to Current Water Level card
- Add Current Trend line to Elevation Projection chart (based on weekly rate)
- Improve ramps page with Available/Unusable groupings sorted by elevation
- Update favorites dropdown with circular status icons matching ramps page
- Larger star icons with theme-aligned colors
- Sort favorites by min_safe_elevation (ascending)
- Remove duplicate Stateline Auxiliary Ramp from database seeds
- Fix elevation ft wrapping issue with whitespace-nowrap
- Reorder metrics: Elevation, Daily Change, Weekly Change, Content, Inflow, Outflow
- Storage Profile toggle now inline with title on mobile
- Add .nvmrc and DEV_SETUP.md for Node.js version management
- Remove nodemon dependency (use Next.js built-in HMR)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,27 +15,27 @@
   },
   "dependencies": {
     "next": "16.1.1",
+    "pg": "^8.11.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "pg": "^8.11.3",
     "recharts": "^2.10.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/pg": "^8.10.9",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@playwright/test": "^1.40.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.0.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "jsdom": "^23.0.1",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^1.0.4",
-    "jsdom": "^23.0.1",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vitest": "^1.0.4"
   }
 }
