--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pg": "^8.11.3",
     "react": "19.2.3",
