Rename PWA to Lake Powell Data and make logo fill header height on mobile

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Lake Powell Water Data",
-  "short_name": "Lake Powell",
+  "name": "Lake Powell Data",
+  "short_name": "Lake Powell Data",
   "description": "Track and display Lake Powell water data, boat ramp accessibility, and historical trends",
   "start_url": "/",
   "display": "standalone",
