--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
+    "mapbox-gl": "^3.18.0",
     "next": "16.1.1",
     "pg": "^8.11.3",
     "react": "19.2.3",
